# motia-cli

./: .gitignore  Cargo.toml  README.md  build.sh  install.sh
.github/workflows/: publish-homebrew.yml  release.yml
src/: banner.rs  create.rs  github.rs  main.rs
